--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/master.css">
     <title>Home</title>
   </head>
   <body>
     <header>
       <a href="index.html">Views</a>
       <form>
-        <input type="text" class="form" onkeyup="showResult(this.value)">
+        <input type="text" class="form" onkeyup="">
         <div id="output"></div>
       </form>
     </header>
@@ -26,6 +27,9 @@
     </form>
     <br>
       <div id="output"><b>Person info will be listed..</b></div>
+      <div id="info"></div>
+      <button id="btn"type="button" name="button">*</button>
+      <script src="js/system.js" charset="utf-8"></script>
       <script src="js/data.js" charset="utf-8"></script>
     <script src="js/app.js" charset="utf-8"></script>
   </body>
